# omnicore

./: .gitignore  README.md  RELEASE_NOTES.md  cli.py  pyproject.toml
.github/workflows/: package.yml
adapters/: local.py
config/: loader.py
core/: app.py  container.py  dependency.py  lifecycle.py  runtime.py  shutdown.py
examples/: basic_app.py  scalable_app.py
extensions/: filesystem.py
modules/: base.py  config.py  health.py  registry.py
plugins/: base.py  loader.py  manager.py
runtime/: instance.py  tasks.py
tests/: test_app.py
